# js-wasm-binary-sizes

./: .gitignore  README.md  justfile  run.sh
component/: component.wit
component/js/: handler.js  package.json
component/rust/: Cargo.toml
component/rust/src/: bindings.rs  lib.rs
configs/baseline/: run.sh
configs/minimal/: componentize-js.patch  run.sh  starlingmonkey.patch
configs/minimal-sm/: run.sh  spidermonkey-cmake.patch
patches/: componentize-js.patch  starlingmonkey.patch
runner/: Cargo.toml
runner/src/: main.rs
