[package]
name = "handler-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen-rt = { version = "0.43.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "test:test"

[package.metadata.component.target.dependencies]
"test:test" = { path = "../" }  # directory containing the WIT package